--- a/myweb/public/main.html
+++ b/myweb/public/main.html
@@ -15,7 +15,7 @@
       안녕하세요. 홈페이지에 방문한 것을 환영합니다.
     </p>
 
-    <img src="images/tube.png" alt="" width="300px;"  />
+    <img src="/images/tube.png" alt="" width="300px;"  />
     
 
     </script>
