--- a/myweb/public/webform11.html
+++ b/myweb/public/webform11.html
@@ -17,10 +17,11 @@
         <h2>메시지</h2>
         <div id="writePanel">
             <div class="message">
-                <form name="msgform" id="msgform" onsubmit="return false;">
+                <form name="msgform" id="msgform" onsubmit="return false;" enctype="multipart/form-data">
                     <input type="text" name="name" id="name" placeholder="name" required>
                     <input type="email" name="email" id="email" placeholder="email">
                     <textarea name="msg" id="msg" placeholder="leave message" required></textarea>
+                    <input type="file" name="file">
                     <button id="send">Send Message</button>
                 </form>
             </div>
@@ -30,6 +31,7 @@
             <div class="message">
                 <div id="vname">작성자</div>
                 <div id="vmessage">메시지</div>
+                
                 <button id="btnList">목록</button>
             </div>
         </div>
