--- a/myweb/public/webform11.html
+++ b/myweb/public/webform11.html
@@ -21,9 +21,14 @@
                     <input type="text" name="name" id="name" placeholder="name" required>
                     <input type="email" name="email" id="email" placeholder="email">
                     <textarea name="msg" id="msg" placeholder="leave message" required></textarea>
-                    <input type="file" name="file">
                     <button id="send">Send Message</button>
                 </form>
+            </div>
+            <div>
+                <form action='/upload' method="post" enctype="multipart/form-data">
+                    <input type="file" name="userFile">
+                    <input type="submit">
+                </form>   
             </div>
         </div>
 
