--- a/myweb/public/webform11.html
+++ b/myweb/public/webform11.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="/webform11.css">
-    <script src="/jquery-1.11.1.min.js"></script>
+    <!-- <script src="/jquery-1.11.1.min.js"></script> -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="/jquery.paging.min.js"></script>
     <script src="/webform11.js"></script>
 <meta charset="utf-8"></head>
@@ -17,18 +18,13 @@
         <h2>메시지</h2>
         <div id="writePanel">
             <div class="message">
-                <form name="msgform" id="msgform" onsubmit="return false;" enctype="multipart/form-data">
+                <form name="msgform" action="/api/photo" msgform" onsubmit="return false;" enctype="multipart/form-data" method="post">
                     <input type="text" name="name" id="name" placeholder="name" required>
-                    <input type="email" name="email" id="email" placeholder="email">
                     <textarea name="msg" id="msg" placeholder="leave message" required></textarea>
+                    <input type="file" name="userPhoto" />
+
                     <button id="send">Send Message</button>
                 </form>
-            </div>
-            <div>
-                <form action='/upload' method="post" enctype="multipart/form-data">
-                    <input type="file" name="userFile">
-                    <input type="submit">
-                </form>   
             </div>
         </div>
 
