--- a/myweb/public/webform11.html
+++ b/myweb/public/webform11.html
@@ -20,6 +20,7 @@
             <div class="message">
                 <form name="msgform" action="/api/photo" msgform" onsubmit="return false;" enctype="multipart/form-data" method="post">
                     <input type="text" name="name" id="name" placeholder="name" required>
+                    <input type="text" name="email" id="email" placeholder="email" required>
                     <textarea name="msg" id="msg" placeholder="leave message" required></textarea>
                     <input type="file" name="userPhoto" />
 
